``` feat(main): add multi-source Mustache template support for JSON mapping
- Enhance MappingConfiguration.MappingRule to support multiple JSONPaths
- Implement MultiSourceDataContext to hold multiple JSON data sources for templates
- Extend MustacheMapper to process mappings with multiple JSONPath sources
  - Support array and single item processing with multi-source context
  - Provide backward compatibility for single-source mappings
- Update MappingProcessor to pass full source node for Mustache mappings
- Add example multi-source config and input JSON resource files
- Create MultiSourceDemo class demonstrating multi-source template usage
- Add multi-source Mustache templates to TemplateRegistry with relevant fields
- Extend TemplateEngine to render templates with generic data objects
- Add comprehensive unit tests for multi-source Mustache mapping scenarios
- Add integration and debug tests covering end-to-end multi-source mapping
- Update README to document multi-source template features and usage examples
- Correct example JSON property names for consistency (orderId, productName)

This commit introduces significant new functionality enabling Mustache templates
to combine data from multiple JSONPath expressions within a single mapping.
It allows richer JSON transformations and expands the flexibility of the JSON
Mustache Mapper library by supporting multi-source contexts accessible in
templates via keys like {{source2}}, {{source3}}, etc., while retaining full
backward compatibility with single-source mappings.
```